tests/sintax-semanth/should_fail/test8Wrong.tds
//This test should fail because boolean is not a valid word
program
begin
	boolean fun(integer w)
		begin
			integer a = 5;
		end
end